mate-document-viewer (1.5.0-1) UNRELEASED; urgency=low

  * New upstream development release.
  * Add libgxps-dev in build depends.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Sun, 02 Sep 2012 23:14:52 +0200

mate-document-viewer (1.4.0-1) unstable; urgency=low

  * New upstream release. 

 -- Steve Zesch <stevezesch2@gmail.com>  Sun, 15 Jul 2012 13:54:00 -0400

mate-document-viewer (1.2.0-4) unstable; urgency=low

  * Rebuild.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Thu, 14 Jun 2012 00:15:41 +0200

mate-document-viewer (1.2.0-3) unstable; urgency=low

  * Rebuild.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Sun, 06 May 2012 12:11:49 +0200

mate-document-viewer (1.2.0-2) unstable; urgency=low

  * Rebuild for precise. 

 -- Steve Zesch <stevezesch2@gmail.com>  Fri, 30 Mar 2012 20:33:04 -0400

mate-document-viewer (1.2.0-1) unstable; urgency=low

  * New upstream release.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Wed, 07 Mar 2012 00:44:33 +0100

mate-document-viewer (1.1.1-1) unstable; urgency=low

  * New upstream bugfix release.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Fri, 23 Dec 2011 22:28:21 +0100

mate-document-viewer (1.1.0-2) unstable; urgency=low

  * Fixed conflict between atril and atril-common.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Wed, 14 Dec 2011 02:09:35 +0100

mate-document-viewer (1.1.0-1) unstable; urgency=low

  * New upstream release.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Tue, 13 Dec 2011 23:12:09 +0100

mate-document-viewer (1.0.7-2) unstable; urgency=low

  * Fixed depends.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Sun, 27 Nov 2011 00:09:47 +0100

mate-document-viewer (1.0.7-1) unstable; urgency=low

  * New upstream release.
  * Fixed mateconf schemas.
  * Depends on mateconf witb triggers.
  * Added atril-dbg and atril-common packages.

 -- Stefano Karapetsas <stefano@karapetsas.com>  Sat, 26 Nov 2011 22:53:12 +0100

mate-document-viewer (1.0.3-3) unstable; urgency=low
