@@ -1,5 +1,7 @@
+usr/share/doc/mate/
 usr/share/omf/
 usr/share/atril/
 usr/share/icons/
 usr/share/locale/
 usr/share/mate/
+usr/share/thumbnailers/
