@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Stefano Karapetsas <stefano@karapetsas.com>
 Uploaders: Steve Zesch <stevezesch2@gmail.com>
 Build-Depends: cdbs,
-               debhelper (>= 8),
+               debhelper (>= 9),
                intltool,
                mate-common,
                mate-doc-utils,
@@ -18,10 +18,8 @@ Build-Depends: cdbs,
                mate-icon-theme,
                libxml2-dev,
                libsm-dev,
-               libmateconf-dev,
-               libgconf2-dev,
                zlib1g-dev,
-               libcaja-extension-dev,
+               libcaja-extension-dev (>= 1.5.0),
                libpoppler-glib-dev,
                libspectre-dev,
                libtiff4-dev,
@@ -41,7 +39,6 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          mate-icon-theme,
          shared-mime-info,
-         mate-conf (>= 1.1.0),
          atril-common (= ${source:Version}),
          libatril (= ${binary:Version})
 Recommends: dbus-x11,
