@@ -2,6 +2,9 @@ mate-document-viewer (1.5.0-1) UNRELEASED; urgency=low
 
   * New upstream development release.
   * Add libgxps-dev in build depends.
+  * Remove deprecated libs.
+  * Depend to debhelper 9.
+  * debian/rules: remove mateconf stuff.
 
  -- Stefano Karapetsas <stefano@karapetsas.com>  Sun, 02 Sep 2012 23:14:52 +0200
 
